--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220924.606/torch-1.13.0.dev20220924%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220924+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220924.606/torch-1.13.0.dev20220924%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220924+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220924.606/torch_mlir-20220924.606-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220924.606-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220924.606/torch_mlir-20220924.606-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220924.606-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220923.605/torch-1.13.0.dev20220923%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220923+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220923.605/torch-1.13.0.dev20220923%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220923+cpu-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220923.605/torch-1.13.0.dev20220923-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220923-cp310-none-macosx_10_9_x86_64.whl</a><br />
@@ -143,7 +147,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220828.579/torch_mlir-20220828.579-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220828.579-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220827.578/torch-1.13.0.dev20220827-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220827-cp310-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220827.578/torch_mlir-20220827.578-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220827.578-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220826.577/torch-1.13.0.dev20220826-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220826-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220826.577/torch_mlir-20220826.577-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220826.577-cp310-cp310-macosx_11_0_universal2.whl</a><br />
   </body>
 </html>
