--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220925.607/torch-1.13.0.dev20220925%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220925+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220925.607/torch-1.13.0.dev20220925%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220925+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220925.607/torch_mlir-20220925.607-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220925.607-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220925.607/torch_mlir-20220925.607-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220925.607-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220924.606/torch-1.13.0.dev20220924%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220924+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220924.606/torch-1.13.0.dev20220924%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220924+cpu-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220924.606/torch-1.13.0.dev20220924-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220924-cp310-none-macosx_10_9_x86_64.whl</a><br />
@@ -147,7 +151,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20220829.49/torch_mlir-20220829.49-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220829.49-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220828.579/torch-1.13.0.dev20220828-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220828-cp310-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220828.579/torch_mlir-20220828.579-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220828.579-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220827.578/torch-1.13.0.dev20220827-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220827-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220827.578/torch_mlir-20220827.578-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220827.578-cp310-cp310-macosx_11_0_universal2.whl</a><br />
   </body>
 </html>
