--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220927.609/torch-1.13.0.dev20220927%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220927+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220927.609/torch-1.13.0.dev20220927%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220927+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220927.609/torch_mlir-20220927.609-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220927.609-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220927.609/torch_mlir-20220927.609-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220927.609-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220926.608/torch-1.13.0.dev20220926%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220926+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220926.608/torch-1.13.0.dev20220926%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220926+cpu-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220926.608/torch-1.13.0.dev20220926-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220926-cp310-none-macosx_10_9_x86_64.whl</a><br />
@@ -155,7 +159,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220829.580/torch_mlir-20220829.580-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220829.580-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220829.580/torch_mlir-20220829.580-cp38-cp38-linux_x86_64.whl'>torch_mlir-20220829.580-cp38-cp38-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220829.580/torch_mlir-20220829.580-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220829.580-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20220829.49/torch-1.13.0.dev20220829-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220829-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20220829.49/torch_mlir-20220829.49-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220829.49-cp310-cp310-macosx_11_0_universal2.whl</a><br />
   </body>
 </html>
