--- a/package-index/index.html
+++ b/package-index/index.html
@@ -3,7 +3,9 @@
   <body>
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220927.609/torch-1.13.0.dev20220927%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220927+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220927.609/torch-1.13.0.dev20220927%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220927+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220927.609/torch-1.13.0.dev20220927-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220927-cp310-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220927.609/torch_mlir-20220927.609-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220927.609-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220927.609/torch_mlir-20220927.609-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220927.609-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220927.609/torch_mlir-20220927.609-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220927.609-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220926.608/torch-1.13.0.dev20220926%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220926+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220926.608/torch-1.13.0.dev20220926%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220926+cpu-cp39-cp39-linux_x86_64.whl</a><br />
