--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220929.611/torch-1.13.0.dev20220929%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220929+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220929.611/torch-1.13.0.dev20220929%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220929+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220929.611/torch_mlir-20220929.611-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220929.611-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220929.611/torch_mlir-20220929.611-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220929.611-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20220928.51/torch-1.13.0.dev20220928-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220928-cp310-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20220928.51/torch_mlir-20220928.51-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220928.51-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220928.610/torch-1.13.0.dev20220928-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220928-cp310-none-macosx_10_9_x86_64.whl</a><br />
@@ -147,7 +151,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220902.584/torch_mlir-20220902.584-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220902.584-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220901.583/torch-1.13.0.dev20220901-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220901-cp310-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220901.583/torch_mlir-20220901.583-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220901.583-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220831.582/torch-1.13.0.dev20220831-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220831-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220831.582/torch_mlir-20220831.582-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220831.582-cp310-cp310-macosx_11_0_universal2.whl</a><br />
   </body>
 </html>
