--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221005.617/torch-1.13.0.dev20221003%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20221003+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221005.617/torch-1.13.0.dev20221003%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20221003+cpu-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221005.617/torch-1.13.0.dev20221003-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20221003-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221005.617/torch_mlir-20221005.617-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221005.617-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221005.617/torch_mlir-20221005.617-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221005.617-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221005.617/torch_mlir-20221005.617-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221005.617-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221004.616/torch-1.13.0.dev20221003%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20221003+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221004.616/torch-1.13.0.dev20221003%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20221003+cpu-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221004.616/torch-1.13.0.dev20221003-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20221003-cp310-none-macosx_10_9_x86_64.whl</a><br />
