--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221011.55/torch-1.14.0.dev20221010%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221010+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221011.55/torch-1.14.0.dev20221010%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221010+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221011.55/torch-1.14.0.dev20221010-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221010-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221011.55/torch_mlir-20221011.55-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221011.55-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221011.55/torch_mlir-20221011.55-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221011.55-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221011.55/torch_mlir-20221011.55-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221011.55-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221010.622/torch-1.13.0.dev20221004%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20221004+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221010.622/torch-1.13.0.dev20221004%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20221004+cpu-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221010.622/torch-1.13.0.dev20221004-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20221004-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221010.622/torch_mlir-20221010.622-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221010.622-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221010.622/torch_mlir-20221010.622-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221010.622-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221010.622/torch_mlir-20221010.622-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221010.622-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221009.621/torch-1.13.0.dev20221004%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20221004+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221009.621/torch-1.13.0.dev20221004%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20221004+cpu-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221009.621/torch-1.13.0.dev20221004-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20221004-cp310-none-macosx_10_9_x86_64.whl</a><br />
@@ -27,6 +37,12 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221006.618/torch_mlir-20221006.618-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221006.618-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221006.618/torch_mlir-20221006.618-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221006.618-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221006.618/torch_mlir-20221006.618-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221006.618-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221010.53/torch-1.13.0.dev20221003%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20221003+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221010.53/torch-1.13.0.dev20221003%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20221003+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221010.53/torch-1.13.0.dev20221003-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20221003-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221010.53/torch_mlir-20221010.53-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221010.53-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221010.53/torch_mlir-20221010.53-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221010.53-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221010.53/torch_mlir-20221010.53-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221010.53-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221005.617/torch-1.13.0.dev20221003%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20221003+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221005.617/torch-1.13.0.dev20221003%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20221003+cpu-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221005.617/torch-1.13.0.dev20221003-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20221003-cp310-none-macosx_10_9_x86_64.whl</a><br />
@@ -143,17 +159,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220914.596/torch-1.13.0.dev20220914%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220914+cpu-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220914.596/torch_mlir-20220914.596-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220914.596-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220914.596/torch_mlir-20220914.596-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220914.596-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220913.595/torch-1.13.0.dev20220913%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220913+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220913.595/torch-1.13.0.dev20220913%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220913+cpu-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220913.595/torch-1.13.0.dev20220913-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220913-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220913.595/torch_mlir-20220913.595-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220913.595-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220913.595/torch_mlir-20220913.595-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220913.595-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220913.595/torch_mlir-20220913.595-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220913.595-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220912.594/torch-1.13.0.dev20220912%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220912+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220912.594/torch-1.13.0.dev20220912%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220912+cpu-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220912.594/torch-1.13.0.dev20220912-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220912-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220912.594/torch_mlir-20220912.594-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220912.594-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220912.594/torch_mlir-20220912.594-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220912.594-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220912.594/torch_mlir-20220912.594-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220912.594-cp39-cp39-linux_x86_64.whl</a><br />
   </body>
 </html>
