--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221012.624/torch-1.14.0.dev20221011%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221011+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221012.624/torch-1.14.0.dev20221011%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221011+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221012.624/torch-1.14.0.dev20221011-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221011-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221012.624/torch_mlir-20221012.624-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221012.624-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221012.624/torch_mlir-20221012.624-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221012.624-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221012.624/torch_mlir-20221012.624-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221012.624-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221011.55/torch-1.14.0.dev20221010%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221010+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221011.55/torch-1.14.0.dev20221010%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221010+cpu-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221011.55/torch-1.14.0.dev20221010-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221010-cp310-none-macosx_10_9_x86_64.whl</a><br />
@@ -155,9 +161,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220915.597/torch-1.13.0.dev20220915%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220915+cpu-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220915.597/torch_mlir-20220915.597-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220915.597-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220915.597/torch_mlir-20220915.597-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220915.597-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220914.596/torch-1.13.0.dev20220914%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220914+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220914.596/torch-1.13.0.dev20220914%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220914+cpu-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220914.596/torch_mlir-20220914.596-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220914.596-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220914.596/torch_mlir-20220914.596-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220914.596-cp39-cp39-linux_x86_64.whl</a><br />
   </body>
 </html>
