--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch-1.14.0.dev20221012%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch-1.14.0.dev20221012%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch-1.14.0.dev20221012%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch-1.14.0.dev20221012-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221012-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch_mlir-20221012.57-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221012.57-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch_mlir-20221012.57-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221012.57-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch_mlir-20221012.57-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221012.57-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch_mlir-20221012.57-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221012.57-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221012.624/torch-1.14.0.dev20221011%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221011+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221012.624/torch-1.14.0.dev20221011%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221011+cpu-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221012.624/torch-1.14.0.dev20221011-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221011-cp310-none-macosx_10_9_x86_64.whl</a><br />
@@ -157,9 +165,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220916.598/torch-1.13.0.dev20220916%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220916+cpu-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220916.598/torch_mlir-20220916.598-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220916.598-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220916.598/torch_mlir-20220916.598-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220916.598-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220915.597/torch-1.13.0.dev20220915%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220915+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220915.597/torch-1.13.0.dev20220915%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220915+cpu-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220915.597/torch_mlir-20220915.597-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220915.597-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220915.597/torch_mlir-20220915.597-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220915.597-cp39-cp39-linux_x86_64.whl</a><br />
   </body>
 </html>
