--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch-1.14.0.dev20221012%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch-1.14.0.dev20221012%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch-1.14.0.dev20221012%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch-1.14.0.dev20221012-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221012-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch_mlir-20221013.625-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221013.625-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch_mlir-20221013.625-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221013.625-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch_mlir-20221013.625-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221013.625-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch_mlir-20221013.625-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221013.625-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch-1.14.0.dev20221012%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch-1.14.0.dev20221012%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch-1.14.0.dev20221012%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp39-cp39-linux_x86_64.whl</a><br />
@@ -161,9 +169,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220917.599/torch-1.13.0.dev20220917%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220917+cpu-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220917.599/torch_mlir-20220917.599-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220917.599-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220917.599/torch_mlir-20220917.599-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220917.599-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220916.598/torch-1.13.0.dev20220916%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220916+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220916.598/torch-1.13.0.dev20220916%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220916+cpu-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220916.598/torch_mlir-20220916.598-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220916.598-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220916.598/torch_mlir-20220916.598-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220916.598-cp39-cp39-linux_x86_64.whl</a><br />
   </body>
 </html>
