--- a/package-index/index.html
+++ b/package-index/index.html
@@ -9,6 +9,14 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch_mlir-20221013.625-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221013.625-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch_mlir-20221013.625-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221013.625-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch_mlir-20221013.625-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221013.625-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch-1.14.0.dev20221012%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch-1.14.0.dev20221012%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch-1.14.0.dev20221012%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch-1.14.0.dev20221012-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221012-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch_mlir-20221013.58-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221013.58-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch_mlir-20221013.58-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221013.58-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch_mlir-20221013.58-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221013.58-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221013.58/torch_mlir-20221013.58-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221013.58-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch-1.14.0.dev20221012%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch-1.14.0.dev20221012%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221012.57/torch-1.14.0.dev20221012%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp39-cp39-linux_x86_64.whl</a><br />
@@ -165,9 +173,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220918.600/torch-1.13.0.dev20220918%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220918+cpu-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220918.600/torch_mlir-20220918.600-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220918.600-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220918.600/torch_mlir-20220918.600-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220918.600-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220917.599/torch-1.13.0.dev20220917%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220917+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220917.599/torch-1.13.0.dev20220917%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220917+cpu-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220917.599/torch_mlir-20220917.599-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220917.599-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220917.599/torch_mlir-20220917.599-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220917.599-cp39-cp39-linux_x86_64.whl</a><br />
   </body>
 </html>
