--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221014.626/torch-1.14.0.dev20221013%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221013+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221014.626/torch-1.14.0.dev20221013%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221013+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221014.626/torch-1.14.0.dev20221013%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221013+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221014.626/torch-1.14.0.dev20221013-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221013-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221014.626/torch_mlir-20221014.626-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221014.626-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221014.626/torch_mlir-20221014.626-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221014.626-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221014.626/torch_mlir-20221014.626-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221014.626-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221014.626/torch_mlir-20221014.626-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221014.626-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch-1.14.0.dev20221012%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch-1.14.0.dev20221012%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221013.625/torch-1.14.0.dev20221012%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp39-cp39-linux_x86_64.whl</a><br />
@@ -169,9 +177,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220919.601/torch_mlir-20220919.601-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220919.601-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220919.601/torch_mlir-20220919.601-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220919.601-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220919.601/torch_mlir-20220919.601-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220919.601-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220918.600/torch-1.13.0.dev20220918%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220918+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220918.600/torch-1.13.0.dev20220918%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220918+cpu-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220918.600/torch_mlir-20220918.600-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220918.600-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220918.600/torch_mlir-20220918.600-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220918.600-cp39-cp39-linux_x86_64.whl</a><br />
   </body>
 </html>
