--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221014.59/torch-1.14.0.dev20221012%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221014.59/torch-1.14.0.dev20221012%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221014.59/torch-1.14.0.dev20221012%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221012+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221014.59/torch-1.14.0.dev20221012-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221012-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221014.59/torch_mlir-20221014.59-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221014.59-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221014.59/torch_mlir-20221014.59-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221014.59-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221014.59/torch_mlir-20221014.59-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221014.59-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221014.59/torch_mlir-20221014.59-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221014.59-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221014.626/torch-1.14.0.dev20221013%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221013+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221014.626/torch-1.14.0.dev20221013%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221013+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221014.626/torch-1.14.0.dev20221013%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221013+cpu-cp39-cp39-linux_x86_64.whl</a><br />
@@ -171,11 +179,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220920.602/torch_mlir-20220920.602-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220920.602-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220920.602/torch_mlir-20220920.602-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220920.602-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220920.602/torch_mlir-20220920.602-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220920.602-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220919.601/torch-1.13.0.dev20220919%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20220919+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220919.601/torch-1.13.0.dev20220919%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20220919+cpu-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220919.601/torch-1.13.0.dev20220919-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220919-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220919.601/torch_mlir-20220919.601-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220919.601-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220919.601/torch_mlir-20220919.601-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220919.601-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220919.601/torch_mlir-20220919.601-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220919.601-cp39-cp39-linux_x86_64.whl</a><br />
   </body>
 </html>
