--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221017.629/torch-1.14.0.dev20221016%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221016+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221017.629/torch-1.14.0.dev20221016%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221016+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221017.629/torch-1.14.0.dev20221016%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221016+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221017.629/torch-1.14.0.dev20221016-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221016-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221017.629/torch_mlir-20221017.629-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221017.629-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221017.629/torch_mlir-20221017.629-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221017.629-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221017.629/torch_mlir-20221017.629-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221017.629-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221017.629/torch_mlir-20221017.629-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221017.629-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221016.628/torch-1.14.0.dev20221015%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221015+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221016.628/torch-1.14.0.dev20221015%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221015+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221016.628/torch-1.14.0.dev20221015%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221015+cpu-cp39-cp39-linux_x86_64.whl</a><br />
@@ -181,7 +189,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220923.605/torch_mlir-20220923.605-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220923.605-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220923.605/torch_mlir-20220923.605-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220923.605-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220923.605/torch_mlir-20220923.605-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220923.605-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220922.604/torch-1.13.0.dev20220922-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220922-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220922.604/torch_mlir-20220922.604-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220922.604-cp310-cp310-macosx_11_0_universal2.whl</a><br />
   </body>
 </html>
