--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221022.634/torch-1.14.0.dev20221021%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221021+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221022.634/torch-1.14.0.dev20221021%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221021+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221022.634/torch-1.14.0.dev20221021%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221021+cpu-cp39-cp39-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221022.634/torch-1.14.0.dev20221021-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221021-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221022.634/torch_mlir-20221022.634-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221022.634-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221022.634/torch_mlir-20221022.634-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221022.634-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221022.634/torch_mlir-20221022.634-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221022.634-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221022.634/torch_mlir-20221022.634-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221022.634-cp39-cp39-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221021.633/torch-1.14.0.dev20221020%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221020+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221021.633/torch-1.14.0.dev20221020%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221020+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221021.633/torch-1.14.0.dev20221020%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.14.0.dev20221020+cpu-cp39-cp39-linux_x86_64.whl</a><br />
@@ -203,7 +211,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220929.611/torch_mlir-20220929.611-cp310-cp310-linux_x86_64.whl'>torch_mlir-20220929.611-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220929.611/torch_mlir-20220929.611-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220929.611-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20220929.611/torch_mlir-20220929.611-cp39-cp39-linux_x86_64.whl'>torch_mlir-20220929.611-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20220928.51/torch-1.13.0.dev20220928-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20220928-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20220928.51/torch_mlir-20220928.51-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20220928.51-cp310-cp310-macosx_11_0_universal2.whl</a><br />
   </body>
 </html>
