--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221027.639/torch-1.14.0.dev20221026%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221026+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221027.639/torch-1.14.0.dev20221026-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221026-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221027.639/torch_mlir-0.0.1-cp310-cp310-win_amd64.whl'>torch_mlir-0.0.1-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221027.639/torch_mlir-20221027.639-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221027.639-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221026.638/torch-1.14.0.dev20221025%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221025+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221026.638/torch-1.14.0.dev20221025%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221025+cpu-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221026.638/torch-1.14.0.dev20221025%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221025+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
@@ -213,11 +217,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221010.53/torch_mlir-20221010.53-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221010.53-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221010.53/torch_mlir-20221010.53-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221010.53-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221010.53/torch_mlir-20221010.53-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221010.53-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221005.617/torch-1.13.0.dev20221003%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.13.0.dev20221003+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221005.617/torch-1.13.0.dev20221003%2Bcpu-cp39-cp39-linux_x86_64.whl'>torch-1.13.0.dev20221003+cpu-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221005.617/torch-1.13.0.dev20221003-cp310-none-macosx_10_9_x86_64.whl'>torch-1.13.0.dev20221003-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221005.617/torch_mlir-20221005.617-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221005.617-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221005.617/torch_mlir-20221005.617-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221005.617-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221005.617/torch_mlir-20221005.617-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221005.617-cp39-cp39-linux_x86_64.whl</a><br />
   </body>
 </html>
