--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221119.662/torch-1.14.0.dev20221114%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221114+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221119.662/torch-1.14.0.dev20221114%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221114+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221119.662/torch-1.14.0.dev20221114%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221114+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221119.662/torch-1.14.0.dev20221114-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221114-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221119.662/torch_mlir-20221119.662-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221119.662-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221119.662/torch_mlir-20221119.662-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221119.662-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221119.662/torch_mlir-20221119.662-cp310-cp310-win_amd64.whl'>torch_mlir-20221119.662-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221119.662/torch_mlir-20221119.662-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221119.662-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221118.661/torch-1.14.0.dev20221114%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221114+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221118.661/torch-1.14.0.dev20221114%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221114+cpu-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221118.661/torch-1.14.0.dev20221114%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221114+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
@@ -217,7 +225,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221024.636/torch_mlir-20221024.636-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221024.636-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221024.636/torch_mlir-20221024.636-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221024.636-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221024.636/torch_mlir-20221024.636-cp39-cp39-linux_x86_64.whl'>torch_mlir-20221024.636-cp39-cp39-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221023.635/torch-1.14.0.dev20221021-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221021-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221023.635/torch_mlir-20221023.635-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221023.635-cp310-cp310-macosx_11_0_universal2.whl</a><br />
   </body>
 </html>
